--- a/exercises/machine-learning/supervised-learning/logistic_regression_scalling.ipynb
+++ b/exercises/machine-learning/supervised-learning/logistic_regression_scalling.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Simarjit1303/Data-Science/blob/main/exercises/machine-learning/supervised-learning/logistic_regression_scalling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "korean-wednesday",
       "metadata": {
         "id": "korean-wednesday"
@@ -56,12 +46,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "xLip1LwcG7ZP",
-        "outputId": "77031181-c1d0-4a36-a505-8fca282d1351",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "id": "xLip1LwcG7ZP",
+        "outputId": "77031181-c1d0-4a36-a505-8fca282d1351"
       },
       "id": "xLip1LwcG7ZP",
       "execution_count": 17,
@@ -488,12 +478,12 @@
         "df.describe()"
       ],
       "metadata": {
-        "id": "xJWVN4lQHOL8",
-        "outputId": "5295bfef-770f-4932-f7d4-8ddea13d6305",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "id": "xJWVN4lQHOL8",
+        "outputId": "5295bfef-770f-4932-f7d4-8ddea13d6305"
       },
       "id": "xJWVN4lQHOL8",
       "execution_count": 18,
@@ -1004,11 +994,11 @@
         "print(f\"df_test size: {df_test.shape}\")"
       ],
       "metadata": {
-        "id": "6ak6IXHIHVL0",
-        "outputId": "f74241e5-65fe-44a5-c1fc-d82b81e037ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6ak6IXHIHVL0",
+        "outputId": "f74241e5-65fe-44a5-c1fc-d82b81e037ed"
       },
       "id": "6ak6IXHIHVL0",
       "execution_count": 16,
@@ -1046,11 +1036,11 @@
         "print(f\"X_test_size: {df_test.shape}\")"
       ],
       "metadata": {
-        "id": "7k9l2QcrIGMh",
-        "outputId": "8a92cb44-41ab-4f26-b950-d7afaccb51c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7k9l2QcrIGMh",
+        "outputId": "8a92cb44-41ab-4f26-b950-d7afaccb51c7"
       },
       "id": "7k9l2QcrIGMh",
       "execution_count": 21,
@@ -1079,11 +1069,11 @@
         "print(\"y_test size:\",y_test.shape)"
       ],
       "metadata": {
-        "id": "vVDI-dNZJ3B0",
-        "outputId": "0f4d053e-e5f6-468d-8244-9376ac4f8a31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vVDI-dNZJ3B0",
+        "outputId": "0f4d053e-e5f6-468d-8244-9376ac4f8a31"
       },
       "id": "vVDI-dNZJ3B0",
       "execution_count": 38,
@@ -1132,12 +1122,12 @@
         "model.fit(x_train_scaled, y_train)"
       ],
       "metadata": {
-        "id": "PycPGWJ4TuoT",
-        "outputId": "8e80379d-84e2-44fa-9e95-d84527aea23e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "PycPGWJ4TuoT",
+        "outputId": "8e80379d-84e2-44fa-9e95-d84527aea23e"
       },
       "id": "PycPGWJ4TuoT",
       "execution_count": 40,
@@ -1591,11 +1581,11 @@
         "print(f\"accuarcy of model is : {accuracy}\")"
       ],
       "metadata": {
-        "id": "t_wWbHhNVvR3",
-        "outputId": "e997fc21-617c-446e-9d1c-7e4ab6a47075",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t_wWbHhNVvR3",
+        "outputId": "e997fc21-617c-446e-9d1c-7e4ab6a47075"
       },
       "id": "t_wWbHhNVvR3",
       "execution_count": 42,
@@ -1629,8 +1619,7 @@
       "version": "3.8.5"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
