--- a/exercises/machine-learning/supervised-learning/support_vector_machines.ipynb
+++ b/exercises/machine-learning/supervised-learning/support_vector_machines.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 57,
       "id": "infrared-copper",
       "metadata": {
         "id": "infrared-copper"
@@ -37,9 +37,16 @@
       "source": [
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.svm import SVC\n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.decomposition import PCA\n",
+        "\n",
+        "# Classifiers\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "\n"
       ]
     },
     {
@@ -59,12 +66,12 @@
         "dataset.head(3)"
       ],
       "metadata": {
-        "id": "76SVCxxskhN5",
-        "outputId": "740e8454-f517-40f1-d1c3-13c9815e8859",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        }
+        },
+        "id": "76SVCxxskhN5",
+        "outputId": "740e8454-f517-40f1-d1c3-13c9815e8859"
       },
       "id": "76SVCxxskhN5",
       "execution_count": 38,
@@ -437,12 +444,12 @@
         "dataset.describe()"
       ],
       "metadata": {
-        "id": "692cg4FOkyeW",
-        "outputId": "10a4e1de-57e3-49c3-91dd-dd8b4a108510",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "id": "692cg4FOkyeW",
+        "outputId": "10a4e1de-57e3-49c3-91dd-dd8b4a108510"
       },
       "id": "692cg4FOkyeW",
       "execution_count": 3,
@@ -951,12 +958,12 @@
         "dataset.isnull().sum().value_counts()"
       ],
       "metadata": {
-        "id": "jzNPLnG-mLPb",
-        "outputId": "21de48e4-d9ee-426d-d07f-f04d934d1cb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 115
-        }
+        },
+        "id": "jzNPLnG-mLPb",
+        "outputId": "21de48e4-d9ee-426d-d07f-f04d934d1cb9"
       },
       "id": "jzNPLnG-mLPb",
       "execution_count": 39,
@@ -1025,11 +1032,11 @@
         "print(f\"dataset_test_size: {test_data.shape}\")"
       ],
       "metadata": {
-        "id": "SqMVYNmAk6Ny",
-        "outputId": "dac295b2-8837-4a5e-c3e8-e40c807fab48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SqMVYNmAk6Ny",
+        "outputId": "dac295b2-8837-4a5e-c3e8-e40c807fab48"
       },
       "id": "SqMVYNmAk6Ny",
       "execution_count": 40,
@@ -1060,11 +1067,11 @@
         "print(f\"y_test_size: {y_test.shape}\")"
       ],
       "metadata": {
-        "id": "QxvW63GWlbfl",
-        "outputId": "b02b578e-ccd5-4999-a878-0f28b7649614",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QxvW63GWlbfl",
+        "outputId": "b02b578e-ccd5-4999-a878-0f28b7649614"
       },
       "id": "QxvW63GWlbfl",
       "execution_count": 41,
@@ -1084,6 +1091,36 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Feature Engineering\n"
+      ],
+      "metadata": {
+        "id": "bkF3HEnPyipF"
+      },
+      "id": "bkF3HEnPyipF"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Scale the data\n",
+        "scaler = StandardScaler()\n",
+        "x_train_scaled = scaler.fit_transform(x_train)\n",
+        "x_test_scaled = scaler.transform(x_test)\n",
+        "\n",
+        "# Apply PCA\n",
+        "pca = PCA(n_components=0.95)  # Keep 95% of variance\n",
+        "x_train_pca = pca.fit_transform(x_train_scaled)\n",
+        "x_test_pca = pca.transform(x_test_scaled)"
+      ],
+      "metadata": {
+        "id": "WHX1Ioyiypt_"
+      },
+      "id": "WHX1Ioyiypt_",
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# [Method 1] Data Modelling and prediction with SVM.SVC(default parameter)\n"
       ],
       "metadata": {
@@ -1098,33 +1135,135 @@
         "# Default hyperparameter means C=1.0, kernel=rbf and gamma=auto among other parameters\n",
         "\n",
         "# initialisinfg classifier with default parameter\n",
-        "svc = SVC()\n",
-        "\n",
+        "svc1 = SVC()\n",
+        "svc2 = SVC()\n",
         "# fitting classifier to training dataset\n",
-        "svc.fit(x_train, y_train)\n",
-        "\n",
+        "svc1.fit(x_train, y_train)\n",
+        "svc2.fit(x_train_pca, y_train)\n",
         "# makimg prediction\n",
-        "y_predict = svc.predict(x_test)\n",
+        "y_predict1 = svc1.predict(x_test)\n",
+        "y_predict2 = svc2.predict(x_test_pca)\n",
         "\n",
-        "# checking the accuracy of our model\n",
-        "accuracy = accuracy_score(y_test, y_predict)\n",
-        "print(f\"Accuracy of our model with default perameter is: {accuracy*100}\")\n"
+        "# checking the accuracy of our model before pca\n",
+        "accuracy = accuracy_score(y_test, y_predict1)\n",
+        "print(f\"Accuracy of our model before PCA: {accuracy*100}\")\n",
+        "\n",
+        "# checking the accuracy of our model after pca\n",
+        "accuracy = accuracy_score(y_test, y_predict2)\n",
+        "print(f\"Accuracy of our model after PCA: {accuracy*100}\")\n",
+        "\n"
       ],
       "metadata": {
-        "id": "jMArPivRpZLM",
-        "outputId": "83b7e307-dd07-43ba-c442-0c16fd0206cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jMArPivRpZLM",
+        "outputId": "451e0187-263c-45c1-9806-e9c7866f3cf4"
       },
       "id": "jMArPivRpZLM",
-      "execution_count": 42,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy of our model with default perameter is: 95.7\n"
+            "Accuracy of our model before PCA: 95.7\n",
+            "Accuracy of our model after PCA: 93.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# [Method 2] Data Modelling and prediction with KNN\n"
+      ],
+      "metadata": {
+        "id": "O4qQNbPNxzQP"
+      },
+      "id": "O4qQNbPNxzQP"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using knn model before pca\n",
+        "knn1 = KNeighborsClassifier(n_neighbors=5)\n",
+        "knn1.fit(x_train, y_train)\n",
+        "y_pred_knn1 = knn1.predict(x_test)\n",
+        "accuracy_knn1 = accuracy_score(y_test, y_pred_knn1)\n",
+        "print(f\"Accuracy of KNN before pca: {accuracy_knn1 * 100}\")\n",
+        "\n",
+        "\n",
+        "# using knn model before pca\n",
+        "knn2 = KNeighborsClassifier(n_neighbors=5)\n",
+        "knn2.fit(x_train_pca, y_train)\n",
+        "y_pred_knn2 = knn2.predict(x_test_pca)\n",
+        "accuracy_knn2 = accuracy_score(y_test, y_pred_knn2)\n",
+        "print(f\"Accuracy of KNN after pca : {accuracy_knn2 * 100}\")\n"
+      ],
+      "metadata": {
+        "id": "KQ8FO45fxFVf",
+        "outputId": "c32a1316-d90f-460a-cc8a-951e71e7588b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "KQ8FO45fxFVf",
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy of KNN before pca: 92.80000000000001\n",
+            "Accuracy of KNN after pca : 89.60000000000001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# [Method 3] Data Modelling and prediction with naive_baye with GaussianNB"
+      ],
+      "metadata": {
+        "id": "SHO5g8rR3HJs"
+      },
+      "id": "SHO5g8rR3HJs"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using naive_baye with GaussianNB model before pca\n",
+        "nb1 = GaussianNB()\n",
+        "nb1.fit(x_train, y_train)\n",
+        "y_pred1 = nb1.predict(x_test)\n",
+        "accuracy1 = accuracy_score(y_test, y_pred1)\n",
+        "print(f\"Accuracy with naive_baye using GaussianNB before pca: {accuracy1 * 100}\")\n",
+        "\n",
+        "# using naive_baye with GaussianNB model before pca\n",
+        "nb2 = GaussianNB()\n",
+        "nb2.fit(x_train_pca, y_train)\n",
+        "y_pred2 = nb2.predict(x_test_pca)\n",
+        "accuracy2 = accuracy_score(y_test, y_pred2)\n",
+        "print(f\"Accuracy with naive_baye using GaussianNB after pca: {accuracy2 * 100}\")\n"
+      ],
+      "metadata": {
+        "id": "QY3iMr3g10Fm",
+        "outputId": "17f9297a-2920-414b-a421-a6697a7b2255",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "QY3iMr3g10Fm",
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy with naive_baye using GaussianNB before pca: 62.7\n",
+            "Accuracy with naive_baye using GaussianNB after pca: 53.5\n"
           ]
         }
       ]
