--- a/exercises/machine-learning/supervised-learning/titanic_competition.ipynb
+++ b/exercises/machine-learning/supervised-learning/titanic_competition.ipynb
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 124,
       "id": "infrared-copper",
       "metadata": {
         "id": "infrared-copper"
@@ -79,7 +79,7 @@
         "id": "M-dvGiGk1U0N"
       },
       "id": "M-dvGiGk1U0N",
-      "execution_count": 117,
+      "execution_count": 125,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "id": "UIYQaKRix63h"
       },
       "id": "UIYQaKRix63h",
-      "execution_count": 118,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
         "id": "w-g2gDl_02Hf"
       },
       "id": "w-g2gDl_02Hf",
-      "execution_count": 119,
+      "execution_count": 127,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
         "id": "U1nQDeGr4Kae"
       },
       "id": "U1nQDeGr4Kae",
-      "execution_count": 120,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "id": "kCXXxSWN60aJ"
       },
       "id": "kCXXxSWN60aJ",
-      "execution_count": 121,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "id": "iik6SyWM9g1s"
       },
       "id": "iik6SyWM9g1s",
-      "execution_count": 122,
+      "execution_count": 130,
       "outputs": []
     },
     {
@@ -246,9 +246,9 @@
         "    'Random Forest': {\n",
         "        'model': RandomForestClassifier(random_state=42),\n",
         "        'param_dist': {\n",
-        "            'classifier__n_estimators': [100, 200, 300],\n",
-        "            'classifier__max_depth': [None, 5, 10],\n",
-        "            'classifier__min_samples_split': [2, 5, 10],\n",
+        "            'classifier__n_estimators': [50,100],\n",
+        "            'classifier__max_depth': [3, 5, 7],\n",
+        "            'classifier__min_samples_split': [5, 10],\n",
         "            'classifier__min_samples_leaf': [1, 2, 4],\n",
         "            'classifier__max_features': ['auto','sqrt', 'log2']\n",
         "        }\n",
@@ -317,13 +317,13 @@
       ],
       "metadata": {
         "id": "OrWfb-0hAKEI",
-        "outputId": "bed6d358-1cf9-468a-c204-da9d1d4a8841",
+        "outputId": "989886e3-3c20-42ad-89f7-fe5c33971751",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "OrWfb-0hAKEI",
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,108 +357,6 @@
             "Decision Tree Accuracy (Test): 0.820627802690583\n",
             "Decision Tree Best Hyperparameters: {'classifier__min_samples_split': 2, 'classifier__max_depth': 3}\n",
             "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py:528: FitFailedWarning: \n",
-            "90 fits failed out of a total of 250.\n",
-            "The score on these train-test partitions for these parameters will be set to nan.\n",
-            "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-            "\n",
-            "Below are more details about the failures:\n",
-            "--------------------------------------------------------------------------------\n",
-            "90 fits failed with the following error:\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py\", line 866, in _fit_and_score\n",
-            "    estimator.fit(X_train, y_train, **fit_params)\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 1389, in wrapper\n",
-            "    return fit_method(estimator, *args, **kwargs)\n",
-            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/pipeline.py\", line 662, in fit\n",
-            "    self._final_estimator.fit(Xt, y, **last_step_params[\"fit\"])\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 1382, in wrapper\n",
-            "    estimator._validate_params()\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 436, in _validate_params\n",
-            "    validate_parameter_constraints(\n",
-            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/utils/_param_validation.py\", line 98, in validate_parameter_constraints\n",
-            "    raise InvalidParameterError(\n",
-            "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestClassifier must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'log2', 'sqrt'} or None. Got 'auto' instead.\n",
-            "\n",
-            "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_search.py:1108: UserWarning: One or more of the test scores are non-finite: [       nan        nan 0.82935697 0.83386825 0.83686455        nan\n",
-            " 0.84433846 0.82935697        nan 0.83235327 0.83386825 0.84135338\n",
-            " 0.83236449        nan        nan 0.8293682  0.83686455        nan\n",
-            " 0.82939064 0.83086073 0.83239816        nan 0.83236449 0.8308944\n",
-            "        nan        nan        nan 0.83387947        nan 0.83236449\n",
-            " 0.83385703 0.83387947        nan 0.83537201        nan 0.82937942\n",
-            "        nan 0.83387947 0.83086073 0.84285714 0.83984962 0.83236449\n",
-            " 0.83384581        nan 0.83237572 0.83237572        nan 0.83087196\n",
-            "        nan 0.83384581]\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Random Forest Accuracy (Test): 0.820627802690583\n",
-            "Random Forest Best Hyperparameters: {'classifier__n_estimators': 300, 'classifier__min_samples_split': 10, 'classifier__min_samples_leaf': 4, 'classifier__max_features': 'sqrt', 'classifier__max_depth': 10}\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_search.py:317: UserWarning: The total space of parameters 6 is smaller than n_iter=50. Running 6 iterations. For exhaustive searches, use GridSearchCV.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Support Vector Machine Accuracy (Test): 0.8161434977578476\n",
-            "Support Vector Machine Best Hyperparameters: {'classifier__kernel': 'rbf', 'classifier__C': 1}\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_search.py:317: UserWarning: The total space of parameters 6 is smaller than n_iter=50. Running 6 iterations. For exhaustive searches, use GridSearchCV.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "K-Nearest Neighbors Accuracy (Test): 0.7982062780269058\n",
-            "K-Nearest Neighbors Best Hyperparameters: {'classifier__weights': 'uniform', 'classifier__n_neighbors': 5}\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_search.py:317: UserWarning: The total space of parameters 1 is smaller than n_iter=50. Running 1 iterations. For exhaustive searches, use GridSearchCV.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Naive Bayes Accuracy (Test): 0.7533632286995515\n",
-            "Naive Bayes Best Hyperparameters: {}\n",
-            "\n",
-            "The best model is: Decision Tree with accuracy: 82.06%\n"
           ]
         }
       ]
