--- a/exercises/machine-learning/Neural-Network/stochastic_gradient_descent.ipynb
+++ b/exercises/machine-learning/Neural-Network/stochastic_gradient_descent.ipynb
@@ -51,12 +51,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "licgHmEK2aoL",
-        "outputId": "a693801d-3724-437f-fdd4-8b318589693c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        }
+        },
+        "id": "licgHmEK2aoL",
+        "outputId": "1482b299-7861-40e0-dca0-7caa6348b9e4"
       },
       "id": "licgHmEK2aoL",
       "execution_count": 2,
@@ -90,7 +90,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5469b481-3962-4663-9d9a-d0fafb9cea7a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-80380d6c-2096-4f0e-8ab9-b375f5e3b143\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -260,7 +260,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5469b481-3962-4663-9d9a-d0fafb9cea7a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80380d6c-2096-4f0e-8ab9-b375f5e3b143')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -312,12 +312,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5469b481-3962-4663-9d9a-d0fafb9cea7a button.colab-df-convert');\n",
+              "        document.querySelector('#df-80380d6c-2096-4f0e-8ab9-b375f5e3b143 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5469b481-3962-4663-9d9a-d0fafb9cea7a');\n",
+              "        const element = document.querySelector('#df-80380d6c-2096-4f0e-8ab9-b375f5e3b143');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -337,8 +337,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-053e878d-f437-491d-8ee0-04b11db56f0d\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-053e878d-f437-491d-8ee0-04b11db56f0d')\"\n",
+              "    <div id=\"df-583528af-d406-4818-94e2-58d70429c3d8\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-583528af-d406-4818-94e2-58d70429c3d8')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -457,7 +457,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-053e878d-f437-491d-8ee0-04b11db56f0d button');\n",
+              "            document.querySelector('#df-583528af-d406-4818-94e2-58d70429c3d8 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -494,11 +494,11 @@
         "print(df_train.shape, df_test.shape)"
       ],
       "metadata": {
-        "id": "DAfr-RRK2dlj",
-        "outputId": "b0dcb015-fbee-4077-cd7d-0c9bc07e9726",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DAfr-RRK2dlj",
+        "outputId": "fb84a06f-8cb2-4a4d-ebf3-dc1c006e1495"
       },
       "id": "DAfr-RRK2dlj",
       "execution_count": 3,
@@ -524,11 +524,11 @@
         "print(X_test.shape, y_test.shape)"
       ],
       "metadata": {
-        "id": "TGfVGemS2_-z",
-        "outputId": "63c08d9b-5c42-4bb2-f46c-945660b25068",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TGfVGemS2_-z",
+        "outputId": "48ca2410-1731-4496-ed97-5a3fbe63f36f"
       },
       "id": "TGfVGemS2_-z",
       "execution_count": 4,
@@ -596,11 +596,11 @@
         "print(\"Mean_CV Score:\", cv_score.mean())"
       ],
       "metadata": {
-        "id": "iDmkalEH4irK",
-        "outputId": "c10a454a-3128-490e-889d-2f1f2e0d5261",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iDmkalEH4irK",
+        "outputId": "f308e009-94c9-46d9-c311-f2f8d56c4162"
       },
       "id": "iDmkalEH4irK",
       "execution_count": 6,
@@ -609,7 +609,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mean_CV Score: 0.9081250000000001\n"
+            "Mean_CV Score: 0.9078125\n"
           ]
         }
       ]
@@ -662,11 +662,99 @@
         "print(\"Best Score:\", best_score)"
       ],
       "metadata": {
-        "id": "u1vme1fb_XCs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u1vme1fb_XCs",
+        "outputId": "702394ca-40d7-4efc-f0b2-dd0e081aa416"
       },
       "id": "u1vme1fb_XCs",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py:528: FitFailedWarning: \n",
+            "66 fits failed out of a total of 150.\n",
+            "The score on these train-test partitions for these parameters will be set to nan.\n",
+            "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+            "\n",
+            "Below are more details about the failures:\n",
+            "--------------------------------------------------------------------------------\n",
+            "29 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py\", line 866, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 1382, in wrapper\n",
+            "    estimator._validate_params()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 436, in _validate_params\n",
+            "    validate_parameter_constraints(\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/utils/_param_validation.py\", line 98, in validate_parameter_constraints\n",
+            "    raise InvalidParameterError(\n",
+            "sklearn.utils._param_validation.InvalidParameterError: The 'loss' parameter of SGDClassifier must be a str among {'squared_epsilon_insensitive', 'squared_error', 'modified_huber', 'log_loss', 'huber', 'epsilon_insensitive', 'hinge', 'squared_hinge', 'perceptron'}. Got 'log' instead.\n",
+            "\n",
+            "--------------------------------------------------------------------------------\n",
+            "4 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py\", line 866, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 1382, in wrapper\n",
+            "    estimator._validate_params()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 436, in _validate_params\n",
+            "    validate_parameter_constraints(\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/utils/_param_validation.py\", line 98, in validate_parameter_constraints\n",
+            "    raise InvalidParameterError(\n",
+            "sklearn.utils._param_validation.InvalidParameterError: The 'loss' parameter of SGDClassifier must be a str among {'log_loss', 'squared_epsilon_insensitive', 'modified_huber', 'huber', 'perceptron', 'hinge', 'squared_hinge', 'squared_error', 'epsilon_insensitive'}. Got 'log' instead.\n",
+            "\n",
+            "--------------------------------------------------------------------------------\n",
+            "15 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py\", line 866, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 1382, in wrapper\n",
+            "    estimator._validate_params()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 436, in _validate_params\n",
+            "    validate_parameter_constraints(\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/utils/_param_validation.py\", line 98, in validate_parameter_constraints\n",
+            "    raise InvalidParameterError(\n",
+            "sklearn.utils._param_validation.InvalidParameterError: The 'penalty' parameter of SGDClassifier must be a str among {'l2', 'l1', 'elasticnet'} or None. Got 'None' instead.\n",
+            "\n",
+            "--------------------------------------------------------------------------------\n",
+            "18 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_validation.py\", line 866, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 1382, in wrapper\n",
+            "    estimator._validate_params()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/base.py\", line 436, in _validate_params\n",
+            "    validate_parameter_constraints(\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/sklearn/utils/_param_validation.py\", line 98, in validate_parameter_constraints\n",
+            "    raise InvalidParameterError(\n",
+            "sklearn.utils._param_validation.InvalidParameterError: The 'penalty' parameter of SGDClassifier must be a str among {'elasticnet', 'l1', 'l2'} or None. Got 'None' instead.\n",
+            "\n",
+            "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/model_selection/_search.py:1108: UserWarning: One or more of the test scores are non-finite: [       nan 0.59436574 0.77062515 0.94312313        nan        nan\n",
+            "        nan 0.59218537 0.10968811 0.90062264        nan 0.67313656\n",
+            " 0.71811664 0.88218797        nan 0.71717826 0.70155609 0.88218621\n",
+            "        nan 0.90593494        nan 0.8834367         nan        nan\n",
+            "        nan 0.87500037 0.90312156 0.66655941 0.80531559 0.70250619\n",
+            "        nan 0.26127389 0.09812424        nan        nan 0.8453154\n",
+            " 0.74249839 0.73562788        nan        nan 0.11062795        nan\n",
+            "        nan 0.69499799        nan        nan        nan 0.16623851\n",
+            " 0.52000108        nan]\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best Parameters: {'alpha': np.float64(0.006672367170464205), 'eta0': np.float64(0.3718364180573207), 'fit_intercept': True, 'l1_ratio': np.float64(0.38246199126716274), 'learning_rate': 'adaptive', 'loss': 'hinge', 'max_iter': 3000, 'penalty': 'l1', 'power_t': np.float64(0.6075448519014384), 'tol': 0.001}\n",
+            "Best Score: 0.9431231328389992\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
